# gameflow-gameserver-sdk

./: .gitignore  .prettierignore  README.md  Taskfile.yml  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
docs/: getting-started.md  local-development.md  spec.md
examples/colyseus/: README.md  package-lock.json  package.json
examples/colyseus/scripts/: join.mjs
examples/colyseus/src/: gameflow-sdk.js  gameflow.ts
examples/go-gameserver/: .dockerignore  Dockerfile  README.md  go.mod  inject-players.mjs  main.go
examples/node-tcp/: Dockerfile  package.json  server.js
proto/: buf.yaml
proto/gameflow/sdk/v1/: sdk.proto
sdk/go/: README.md  conformance_test.go  doc.go  env.go  env_test.go  errors.go  gameflow.go  go.mod  health.go  local.go  local_test.go  logger.go  mode_test.go  options.go  players.go  sidecar.go  transport.go  types.go  types_test.go  watch.go
sdk/go/examples/tcp-server/: main.go
sdk/godot/: README.md  project.godot
sdk/godot/addons/gameflow/: gameflow.gd  gameflow.gd.uid  gameflow_logger.gd  gameflow_logger.gd.uid  gameflow_players.gd  gameflow_players.gd.uid  gameflow_ports.gd  gameflow_ports.gd.uid  gameflow_result.gd  gameflow_result.gd.uid  gameflow_server_info.gd  gameflow_server_info.gd.uid  plugin.cfg  plugin.gd  plugin.gd.uid
sdk/godot/example/: tcp_server.gd  tcp_server.gd.uid
sdk/godot/test/: local_test.gd  local_test.gd.uid  run.mjs  sidecar_test.gd  sidecar_test.gd.uid  test_base.gd  test_base.gd.uid  transport_probe.gd  transport_probe.gd.uid
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/bevy-server/: Cargo.toml
sdk/rust/examples/bevy-server/src/: gameflow_plugin.rs  main.rs
sdk/rust/examples/tokio-tcp/: Cargo.toml
sdk/rust/examples/tokio-tcp/src/: main.rs
sdk/rust/gameflow/: Cargo.toml  README.md
sdk/rust/gameflow/src/: env.rs  error.rs  gameflow.rs  health.rs  lib.rs  local_tests.rs  logger.rs  players.rs  types.rs  watch.rs
sdk/rust/gameflow/src/transport/: local.rs  mod.rs  sidecar.rs
sdk/rust/gameflow/tests/: conformance.rs
sdk/typescript/: README.md  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/examples/colyseus/: package-lock.json  package.json
sdk/typescript/examples/node-tcp/: Dockerfile  package.json
sdk/typescript/src/: env.ts  errors.ts  gameflow.ts  health.ts  index.ts  local.ts  log.ts  players.ts  transport.ts  types.ts  watch.ts
sdk/typescript/test/: env.test.ts  gameflow.test.ts  health.test.ts  local.test.ts  players.test.ts  transport.test.ts
sdk/typescript/test/fixtures/: fake-sidecar.ts
sdk/unity/examples/tcp-chat/: Dockerfile  README.md
sdk/unity/tests/: Core.csproj
sdk/unity/tests/GameFlow.Core.Tests/: BackoffTest.cs  ConformanceTest.cs  DispatcherLogicTest.cs  EnvTest.cs  ErrorsTest.cs  Fixture.cs  GameFlow.Core.Tests.csproj  HealthLoopTest.cs  JsonTest.cs  LocalTransportTest.cs  LoggingTest.cs  ModeTest.cs  ModelTest.cs  PlayersTest.cs  SidecarTransportTest.cs  WatcherTest.cs
sdk/unreal/: .gitignore
sdk/unreal/GameFlow/: CHANGELOG.md  GameFlow.uplugin  README.md
sdk/unreal/HostProject/: GameFlowHost.uproject
sdk/unreal/HostProject/Config/: DefaultEngine.ini
sdk/unreal/HostProject/Plugins/: GameFlow
sdk/unreal/HostProject/Source/: GameFlowHost.Target.cs  GameFlowHostEditor.Target.cs
sdk/unreal/scripts/: run-tests.sh
tools/conformance/: fake-sidecar.ts  serve.mjs
(+87 files in other folders)
