[workspace]
resolver = "2"
members = [
    "gameflow",
    "examples/tokio-tcp",
    "examples/bevy-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/GameFlowGG/gameflow-gameserver-sdk"
homepage = "https://docs.gameflow.gg"
authors = ["GameFlow <hello@gameflow.gg>"]

[workspace.dependencies]
tokio = { version = "1.45", default-features = false, features = ["rt", "time", "sync", "macros"] }
tokio-util = { version = "0.7", default-features = false }
reqwest = { version = "0.13", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
tracing = "0.1"
bevy = { version = "0.18", default-features = false }
crossbeam-channel = "0.5"
gameflow-gameserver-sdk = { version = "0.1.0", path = "gameflow" }

[profile.release]
lto = "thin"
